assets/style.scss
/* Import Google fonts: Roboto, JetBrains Mono */
@import 'https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=JetBrains+Mono:wght@400;700&display=swap';

/* Default (light) theme */
:root {
	color-scheme: light;

	--color-text: oklch(0% 0 0deg);
	--color-text-secondary: oklch(40% 0 0deg);
	--color-text-tertiary: oklch(60% 0 0deg);
	--color-background: oklch(96% 0 0deg);
	--color-background-secondary: oklch(100% 0 0deg);
	--color-background-tertiary: oklch(94% 0 0deg);
	--color-accent: oklch(60% .2 250deg);
	--color-accent-50: oklch(60% .2 250deg / 50%);
	--color-accent-25: oklch(60% .2 250deg / 25%);
	--color-good: oklch(70% .2 160deg);
	--color-good-50: oklch(70% .2 160deg / 50%);
	--color-good-25: oklch(70% .2 160deg / 25%);
	--color-warn: oklch(70% .2 60deg);
	--color-warn-50: oklch(70% .2 60deg / 50%);
	--color-warn-25: oklch(70% .2 60deg / 25%);
	--color-danger: oklch(70% .2 20deg);
	--color-danger-50: oklch(70% .2 20deg / 50%);
	--color-danger-25: oklch(70% .2 20deg / 25%);
	--color-border: #0002;
	--color-scrollbar: oklch(60% 0 0deg);

	/* TODO */
	--color-shadow-ui: #00000010;
	--shadow-card: 2px 2px 6px var(--color-shadow-ui);
	--color-favicon: #f3f3f3;
	--color-icon-shadow: transparent;
	--icon-contrast: .75;
}

/* Dark theme */
:root.dark {
	color-scheme: dark;
	
	--color-text: oklch(85% 0 0deg);
	--color-text-secondary: oklch(75% 0 0deg);
	--color-text-tertiary: oklch(65% 0 0deg);
	--color-background: oklch(20% 0 0deg);
	--color-background-secondary: oklch(25% 0 0deg);
	--color-background-tertiary: oklch(30% 0 0deg);
	--color-accent: oklch(80% .125 250deg);
	--color-accent-50: oklch(80% .125 250deg / 50%);
	--color-accent-25: oklch(80% .125 250deg / 25%);
	--color-good: oklch(80% .125 160deg);
	--color-good-50: oklch(80% .125 160deg / 50%);
	--color-good-25: oklch(80% .125 160deg / 25%);
	--color-warn: oklch(80% .125 60deg);
	--color-warn-50: oklch(80% .125 60deg / 50%);
	--color-warn-25: oklch(80% .125 60deg / 25%);
	--color-danger: oklch(80% .125 20deg);
	--color-danger-50: oklch(80% .125 20deg / 50%);
	--color-danger-25: oklch(80% .125 20deg / 25%);
	--color-border: #8881;
	--color-scrollbar: oklch(40% 0 0deg);

	/* TODO */
	--color-shadow-ui: #00000040;
	--color-favicon: #404040;
	--color-icon-shadow: #00000060;
	--icon-contrast: .75;
}

@media (pointer: coarse) {
	body {
		caret-color: var(--color-accent);
	}
}

* {
	box-sizing: border-box;
}

a {
	color: var(--color-accent);
	text-decoration: none;
	cursor: pointer;

	&:hover,
	&:focus-visible {
		text-decoration: underline;
	}
}

::selection {
	color: var(--color-text);
	background-color: var(--color-accent-25);
}

::-webkit-scrollbar {
	width: .75rem;
	height: .75rem;
	background-color: transparent;
}

::-webkit-scrollbar-thumb {
	background-color: var(--color-scrollbar);
	background-clip: content-box;
	border: .25rem solid transparent;
	border-radius: .5rem;
}

::-webkit-scrollbar-corner {
	display: none;
}

.text-strong {
	font-weight: 700;
}

.text-secondary {
	color: var(--color-text-secondary);
	font-size: .75rem;
}

.allow-pointer-events {
	pointer-events: auto;
}

